Use reusable workflow syntax

--- a/.github/workflows/update-github-org.yml
+++ b/.github/workflows/update-github-org.yml
@@ -13,21 +13,19 @@ on:
     paths:
       - "config.yaml"
 jobs:
-  manage-github-org-config-workflow:
-    name: manage-github-org-config-workflow
-    runs-on: ubuntu-latest
-    steps:
-      - name: Dry run
-        if: github.event_name == 'pull_request'
-        uses: redhat-cop/org/.github/workflows/manage-github-org.yml@main
-        secrets:
-          PERIBOLOS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          APPLY_CHANGES: false
-      - name: Update org
-        if: github.event_name == 'push' || github.event_name == 'schedule'
-        uses: redhat-cop/org/.github/workflows/manage-github-org.yml@main
-        secrets:
-          PERIBOLOS_TOKEN: ${{ secrets.PERIBOLOS_TOKEN }}
-        with:
-          APPLY_CHANGES: true
+  dry-run:
+    name: Peribolos dry run
+    if: github.event_name == 'pull_request'
+    uses: redhat-cop/org/.github/workflows/manage-github-org.yml@main
+    secrets:
+      PERIBOLOS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    with:
+      APPLY_CHANGES: false
+  update-org:
+    name: Peribolos update org
+    if: github.event_name == 'push' || github.event_name == 'schedule'
+    uses: redhat-cop/org/.github/workflows/manage-github-org.yml@main
+    secrets:
+      PERIBOLOS_TOKEN: ${{ secrets.PERIBOLOS_TOKEN }}
+    with:
+      APPLY_CHANGES: true
